[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/sheets/char_1_16.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player1.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/tile_aqua.png" type="Texture" id=3]
[ext_resource path="res://scripts/GunPosition.gd" type="Script" id=4]
[ext_resource path="res://scenes/SuperSoaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/8bitoperator.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 9
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 13 )

[node name="Player1" type="RigidBody2D" groups=[
"player",
]]
z_index = 1
mode = 3
contacts_reported = 12
contact_monitor = true
script = ExtResource( 2 )
weapon_type = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="TileSpriteBG" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -10
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 612, 400 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
animation = "idle"
playing = true

[node name="HealthBar" type="ProgressBar" parent="AnimatedSprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 19.0
theme = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="GunPosition" type="Node2D" parent="."]
position = Vector2( 25, 0 )
z_index = 2
script = ExtResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_PlayerSprite_animation_finished"]
